--- a/systemd/kubelet.service
+++ b/systemd/kubelet.service
@@ -22,6 +22,10 @@ ExecStart=/root/local/bin/kubelet \
   --serialize-image-pulls=false \
   --register-node=true \
   --logtostderr=true \
+  --network-plugin-dir=/etc/cni/net.d \
+  --network-plugin=cni \
+  --cni-bin-dir=/opt/cni/bin \
+  --cgroup-driver=systemd \
   --v=2
 ExecStopPost=/sbin/iptables -A INPUT -s 10.0.0.0/8 -p tcp --dport 4194 -j ACCEPT
 ExecStopPost=/sbin/iptables -A INPUT -s 172.16.0.0/12 -p tcp --dport 4194 -j ACCEPT
