--- a/systemd/kube-proxy.service
+++ b/systemd/kube-proxy.service
@@ -4,10 +4,11 @@ Documentation=https://github.com/GoogleCloudPlatform/kubernetes
 After=network.target
 
 [Service]
-ExecStart=/root/local/bin/kube-proxy \
+WorkingDirectory=/var/lib/kube-proxy
+ExecStart=/usr/local/bin/kube-proxy \
   --bind-address=10.64.3.7 \
-  --cluster-cidr=10.254.0.0/16 \
   --hostname-override=10.64.3.7 \
+  --cluster-cidr=10.254.0.0/16 \
   --kubeconfig=/etc/kubernetes/kube-proxy.kubeconfig \
   --logtostderr=true \
   --v=2
