--- a/manifests/dashboard/dashboard-controller.yaml
+++ b/manifests/dashboard/dashboard-controller.yaml
@@ -21,7 +21,7 @@ spec:
       serviceAccountName: dashboard
       containers:
       - name: kubernetes-dashboard
-        image: cokabug/kubernetes-dashboard-amd64:v1.6.0
+        image: gcr.io/google_containers/kubernetes-dashboard-amd64:v1.6.0
         resources:
           # keep request = limit to keep this container in guaranteed class
           limits:
